--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3",
     "vite": "^6.3.5"
   }
 }
