--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tevvo-intern-challenge",
   "private": true,
   "version": "0.0.0",
-  "type":"commonjs",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.28",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.3.3",
     "vite": "^6.3.5"
   }
